UI improvements in the support button

--- a/src/Brainf_ckSharp.UWP/Controls/DataTemplates/Misc/FeaturedLinkTemplate.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/DataTemplates/Misc/FeaturedLinkTemplate.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -70,17 +72,32 @@
         x:Name="ShadowPanel"
         Color="Black"
         ShadowOpacity="0"
-        BlurRadius="8" OffsetY="4"
+        BlurRadius="8"
+        OffsetY="4"
         HorizontalContentAlignment="Stretch"
         RenderTransformOrigin="0.5, 0.5">
         <controls:DropShadowPanel.RenderTransform>
             <ScaleTransform x:Name="RootTransform"/>
         </controls:DropShadowPanel.RenderTransform>
+
+        <!--Animation triggers-->
+        <interactivity:Interaction.Behaviors>
+            <core:EventTriggerBehavior EventName="PointerEntered">
+                <core:CallMethodAction TargetObject="{x:Bind StoryboardZoomIn}" MethodName="Begin"/>
+            </core:EventTriggerBehavior>
+            <core:EventTriggerBehavior EventName="PointerExited">
+                <core:CallMethodAction TargetObject="{x:Bind StoryboardZoomOut}" MethodName="Begin"/>
+            </core:EventTriggerBehavior>
+        </interactivity:Interaction.Behaviors>
+
+        <!--Link button-->
         <Button
             CornerRadius="8"
+            Style="{StaticResource ButtonRevealShowsAboveContentStyle}"
             Background="{ThemeResource GitHubContributorBackgroundBrush}"
             Click="RootButton_Clicked">
             <Image
+                Source="{x:Bind Image, Mode=OneWay}"
                 Stretch="UniformToFill"
                 VerticalAlignment="Center"/>
         </Button>
