Added Esc key support to close sub pages

--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Host/SubPageHost.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Host/SubPageHost.xaml
@@ -110,6 +110,9 @@
                     Height="48" Width="48"
                     Style="{StaticResource ExpandedSquareButtonRevealStyle}"
                     Click="CloseButton_OnClick">
+                    <Button.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="Escape"/>
+                    </Button.KeyboardAccelerators>
                     <SymbolIcon Symbol="Back" Foreground="White"/>
                 </Button>
 
