--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/UserGuide/Templates/OperatorInfoTemplate.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/UserGuide/Templates/OperatorInfoTemplate.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp.Legacy.UWP.UserControls.Flyouts.UserGuide.Templates.GuideItemDescriptionControl"
+    x:Class="Brainf_ckSharp.UWP.Controls.SubPages.Shell.UserGuide.Templates.OperatorInfoTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,8 +14,7 @@
         BorderThickness="2"
         BorderBrush="#20FFFFFF">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"
-                              MinWidth="40"/>
+            <ColumnDefinition Width="Auto" MinWidth="40"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
