--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/UserGuide/CodeSamples/ResetLoopCodePreview.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/UserGuide/CodeSamples/ResetLoopCodePreview.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp.Legacy.UWP.UserControls.Flyouts.UserGuide.CodeSamples.ResetLoopCodePreviewControl"
+    x:Class="Brainf_ckSharp.UWP.Controls.SubPages.Shell.UserGuide.CodeSamples.ResetLoopCodePreview"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
