--- a/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/UserGuide/CodeSamples/SimpleLoopCodePreview.xaml
+++ b/src/Brainf_ckSharp.UWP/Controls/SubPages/Shell/UserGuide/CodeSamples/SimpleLoopCodePreview.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp.Legacy.UWP.UserControls.Flyouts.UserGuide.CodeSamples.PrintHelloCodePreviewControl"
+    x:Class="Brainf_ckSharp.UWP.Controls.SubPages.Shell.UserGuide.CodeSamples.SimpleLoopCodePreview"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="212"
-    d:DesignWidth="460">
-    
+    d:DesignHeight="200"
+    d:DesignWidth="400">
+
     <!--Root-->
     <Grid Background="#FF1E1E1E">
         <Grid.RowDefinitions>
@@ -16,15 +16,13 @@
         </Grid.RowDefinitions>
 
         <!--Theme title-->
-        <Border
-            Grid.Row="0"
-            Background="#FF333333">
+        <Border Background="#FF333333">
             <Border Background="#20000000">
                 <TextBlock
                     IsTextScaleFactorEnabled="False"
                     Margin="12,4,0,4"
-                    Text="Print &quot;Hello&quot;"
-                    x:Uid="GuideSamplePrintHelloTitle"/>
+                    Text="Copy the current value"
+                    x:Uid="GuideSampleSimpleLoopTitle"/>
             </Border>
         </Border>
 
@@ -36,6 +34,8 @@
             HorizontalScrollBarVisibility="Hidden"
             HorizontalScrollMode="Auto"
             Grid.Row="1">
+
+            <!--Preview grid-->
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -51,14 +51,15 @@
                 <Border 
                     Background="#FF333333"
                     Grid.Column="0"
+                    Grid.Row="0"
                     Grid.RowSpan="2"
                     Width="20"
                     HorizontalAlignment="Left"/>
 
                 <!--Line numbers-->
                 <TextBlock
-                    Grid.Row="0"
                     IsTextScaleFactorEnabled="False"
+                    Grid.Row="0"
                     Grid.Column="1"
                     FontSize="15"
                     HorizontalAlignment="Right"
@@ -73,8 +74,7 @@
                     <Run Text="5"/><LineBreak/>
                     <Run Text="6"/><LineBreak/>
                     <Run Text="7"/><LineBreak/>
-                    <Run Text="8"/><LineBreak/>
-                    <Run Text="9"/>
+                    <Run Text="8"/>
                 </TextBlock>
 
                 <!--Vertical guide-->
@@ -84,26 +84,13 @@
                     Grid.Column="2"
                     Width="1"
                     HorizontalAlignment="Left"
-                    Margin="21,20,0,0">
+                    Margin="21,0,0,0">
                     <StackPanel.Clip>
-                        <RectangleGeometry 
-                            Rect="0,0,1,100"/>
+                        <RectangleGeometry Rect="0,0,1,42"/>
                     </StackPanel.Clip>
                     <StackPanel.RenderTransform>
-                        <TranslateTransform Y="22"/>
+                        <TranslateTransform Y="20"/>
                     </StackPanel.RenderTransform>
-                    <Rectangle 
-                        Margin="0"
-                        Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
                     <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
                     <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
                     <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
@@ -120,9 +107,9 @@
                     Grid.Column="2"
                     Width="1"
                     HorizontalAlignment="Left"
-                    Margin="46,60,0,0">
+                    Margin="21,100,0,0">
                     <StackPanel.Clip>
-                        <RectangleGeometry Rect="0,0,1,40"/>
+                        <RectangleGeometry Rect="0,0,1,20"/>
                     </StackPanel.Clip>
                     <StackPanel.RenderTransform>
                         <TranslateTransform Y="22"/>
@@ -130,9 +117,6 @@
                     <Rectangle 
                         Margin="0"
                         Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
-                    <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
                     <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
                     <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
                     <Rectangle Style="{StaticResource BracketsGuideRectangleStyle}"/>
@@ -147,84 +131,55 @@
                     Grid.Column="2"
                     FontSize="15">
                     <Run 
-                        Text="+++++++"
-                        Foreground="#FFFFFFFF"/>
-                    <Run 
-                        Text="7 in cell #0"
-                        Foreground="#FF52AF3D"
-                        x:Uid="GuideSamplePrintHelloComment1"/><LineBreak/>
-                    <Run 
                         Text="["
                         Foreground="#FF569CD6"/><LineBreak/>
                     <Run 
                         Text="      >"
                         Foreground="#FFDDDDDD"/><Run 
-                        Text="+++++"
-                        Foreground="#FFFFFFFF"/>
-                    <Run 
-                        Text="7 * 5 = 35 in cell #1"
-                        Foreground="#FF52AF3D"
-                        x:Uid="GuideSamplePrintHelloComment2"/><LineBreak/>
-                    <Run 
-                        Text="      ["
-                        Foreground="#FF569CD6"/><LineBreak/>
-                    <Run 
-                        Text="            >"
-                        Foreground="#FFDDDDDD"/><Run 
-                        Text="++"
+                        Text="+"
                         Foreground="#FFFFFFFF"/><Run 
                         Text=">"
                         Foreground="#FFDDDDDD"/><Run 
-                        Text="+++"
-                        Foreground="#FFFFFFFF"/>
+                        Text="+"
+                        Foreground="White"/>
                     <Run 
-                        Text="35 * 2 in cell #2 and 35 * 3 in #3"
+                        Text="Copy in the cells #1 and #2"
                         Foreground="#FF52AF3D"
-                        x:Uid="GuideSamplePrintHelloComment3"/><LineBreak/>
+                        x:Uid="GuideSampleSimpleLoopComment1"/><LineBreak/>
                     <Run 
-                        Text="            &lt;&lt;"
+                        Text="      &lt;&lt;"
                         Foreground="#FFDDDDDD"/><Run 
                         Text="-"
-                        Foreground="#FFFFFFFF"/>
+                        Foreground="White"/>
                     <Run 
-                        Text="Back to loop start and decrement"
+                        Text="Decrement the first cell"
                         Foreground="#FF52AF3D"
-                        x:Uid="GuideSamplePrintHelloComment4"/><LineBreak/>
-                    <Run 
-                        Text="      ]"
-                        Foreground="#FF569CD6"/><Run 
-                        Text="&lt;"
-                        Foreground="#FFDDDDDD"/><Run 
-                        Text="-"
-                        Foreground="#FFFFFFFF"/><LineBreak/>
+                        x:Uid="GuideSampleSimpleLoopComment2"/><LineBreak/>
                     <Run 
                         Text="]"
                         Foreground="#FF569CD6"/><LineBreak/>
                     <Run 
                         Text=">>"
-                        Foreground="#FFDDDDDD"/><Run 
-                        Text="++"
-                        Foreground="#FFFFFFFF"/><Run 
-                        Text="."
-                        Foreground="IndianRed"/><Run 
-                        Text=">"
-                        Foreground="#FFDDDDDD"/><Run 
-                        Text="----"
-                        Foreground="#FFFFFFFF"/><Run 
-                        Text="."
-                        Foreground="IndianRed"/><Run 
-                        Text="+++++++"
-                        Foreground="#FFFFFFFF"/><Run 
-                        Text=".."
-                        Foreground="IndianRed"/><Run 
-                        Text="+++"
-                        Foreground="#FFFFFFFF"/><Run 
-                        Text="."
-                        Foreground="IndianRed"/>
+                        Foreground="#FFDDDDDD"/><LineBreak/>
                     <Run 
-                        Text="Adjust the values and print"
+                        Text="["
+                        Foreground="#FF569CD6"/><LineBreak/>
+                    <Run 
+                        Text="      &lt;&lt;"
+                        Foreground="#FFDDDDDD"/><Run 
+                        Text="+"
+                        Foreground="#FFFFFFFF"/><Run 
+                        Text=">>"
+                        Foreground="#FFDDDDDD"/><Run 
+                        Text="-"
+                        Foreground="White"/>
+                    <Run 
+                        Text="Move second copy back to cell #0"
                         Foreground="#FF52AF3D"
-                        x:Uid="GuideSamplePrintHelloComment5"/>
+                        x:Uid="GuideSampleSimpleLoopComment3"/><LineBreak/>
+                    <Run 
+                        Text="]"
+                        Foreground="#FF569CD6"/>
                 </TextBlock>
             </Grid>
         </ScrollViewer>
