Added syntax highlight support to custom text ranges

--- a/src/Brainf_ckSharp.UWP/Styles/TextStyles.xaml
+++ b/src/Brainf_ckSharp.UWP/Styles/TextStyles.xaml
@@ -39,6 +39,7 @@
         <Setter Property="UseSystemFocusVisuals" Value="{ThemeResource IsApplicationFocusVisualKindReveal}" />
         <Setter Property="ContextFlyout" Value="{StaticResource TextControlCommandBarContextFlyout}" />
         <Setter Property="SelectionFlyout" Value="{StaticResource TextControlCommandBarSelectionFlyout}" />
+        <Setter Property="IsSpellCheckEnabled" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RichEditBox">
