--- a/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckEditBox/Brainf_ckEditBox.xaml
+++ b/src/Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckEditBox/Brainf_ckEditBox.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ide="using:Brainf_ckSharp.UWP.Controls.IDE">
+    xmlns:brainfCkEditBox="using:Brainf_ckSharp.Uwp.Controls.Ide.Brainf_ckEditBox">
 
     <!--IDE RichEditBox style-->
-    <Style TargetType="ide:Brainf_ckEditBox">
+    <Style TargetType="brainfCkEditBox:Brainf_ckEditBox">
         <Setter Property="Foreground" Value="{ThemeResource TextControlForeground}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="ContentLinkForegroundColor" Value="{ThemeResource ContentLinkForegroundColor}" />
