Fixed simple bracket autocomplete

--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -19,6 +19,7 @@
                 <ResourceDictionary Source="Styles/SubPageStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TelerikStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TextStyles.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Brainf_ckSharp.Uwp.Controls.Ide/Themes/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
